--- a/.gitignore
+++ b/.gitignore
@@ -70,6 +70,8 @@ nb-configuration.xml
 # Logs
 logs
 npm-debug.log*
+/node_modules
+/npm-debug.log
 
 # Runtime data
 pids
@@ -90,6 +92,15 @@ coverage
 
 # Compiled binary addons (http://nodejs.org/api/addons.html)
 build/Release
+
+#Tests
+/test/assets/package-*/
+/test/assets/temp-*/
+/test/reports
+/test/tmp/
+
+# Bower
+/bower_components
 
 # Ionic Framework
 .tmp
@@ -228,14 +239,3 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
-
-### Bower
-/node_modules
-/npm-debug.log
-
-/test/assets/package-*/
-/test/assets/temp-*/
-/test/reports
-/test/tmp/
-
-#/bower_components
